crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/caching-enabled-by-default.yml\")).run()?"
snapshot_kind: text
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:1:1
   |
 1 | on: release
   | ^^^^^^^^^^^ generally used when publishing artifacts generated at runtime
 2 |
...
18 |       - name: Setup CI caching
19 |         uses: Swatinem/rust-cache@82a92a6e8fbeee089604da2575dc567ae9ddeaab
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cache enabled by default here
   |
   = note: audit confidence → Low
   = note: this finding has an auto-fix

3 findings (1 ignored, 1 suppressed, 1 fixable): 0 unknown, 0 informational, 0 low, 0 medium, 1 high
